# DataDiodePROFINET

./: README.md
datadiode_receiver/: CMakeLists.txt  Findpigpio.cmake
datadiode_receiver/gsdml/: GSDML-V2.4-FH Technikum Wien-Datadiodereceiver-20231024.xml
datadiode_receiver/src/: DataDiode_Receiver.cpp  DataDiode_ReceiverControl.cpp  DataDiode_ReceiverControl.h
datadiode_receiver/src/i2c/: i2c.cpp  i2c.hpp
datadiode_sender/: CMakeLists.txt
datadiode_sender/gsdml/: GSDML-V2.4-FH Technikum Wien-Datadiodesender-20231023.xml
datadiode_sender/resources/: datadiode_sender_v2.zap17
datadiode_sender/src/: DataDiode_Sender.cpp  DataDiode_SenderControl.cpp  DataDiode_SenderControl.h
datadiode_sender/src/i2c/: i2c.cpp  i2c.hpp
